# record-linkage

./: .gitignore  CLAUDE.md  IMPLEMENTATION_PLAN.md  LICENSE  MATCHING_ANALYSIS.md  Procfile  README.md  TESTING.md  build.sbt  docker-compose.yml  h2h-fantazy.cabal  ibm-old-data.csv  nekot  seeds.py  seeds.tsv
.github/workflows/: CI_FIXES.md  COMPLETE_FIX_SUMMARY.md  DOCKER_FIX.md  ISSUE_RESOLUTION.md  README.md  backend-ci.yml  docker.yml  frontend-ci.yml  integration.yml
backend/: .coveragerc  .env.example  .flake8  Dockerfile  pyproject.toml  pytest.ini  requirements.txt
backend/app/: __init__.py  main.py
backend/app/api/endpoints/: datasets.py  health.py  matching.py
backend/app/core/: __init__.py  config.py
backend/app/ml/: __init__.py  explainability.py  inference.py  model.py  preprocessing.py  training.py
backend/app/models/: __init__.py  schemas.py
backend/app/utils/: data_loader.py
backend/tests/: __init__.py  conftest.py  test_api_datasets.py  test_api_health.py  test_api_matching.py  test_entity_matching_accuracy.py  test_ml_model.py  test_ml_preprocessing.py
backend/tests/test_data/: __init__.py  entity_matching_test_cases.py
config/: xitrum.conf
data-api/src/: ProBasketballAPI.scala
frontend/: Dockerfile  index.html  package.json  vite.config.ts
frontend/src/: App.tsx  main.tsx  vite-env.d.ts
frontend/src/components/: AppBar.tsx  ExplanationDisplay.tsx  MatchResultDisplay.tsx
frontend/src/pages/: BatchProcessingPage.tsx  DatasetsPage.tsx  HomePage.tsx  MatchingPage.tsx
frontend/src/services/: api.ts
frontend/src/types/: index.ts
name-matching/: README.md
project/: build.properties  build.scala  plugins.sbt
scripts/: download_datasets.py  run_matching_tests.py  train_model.py  validate_matching.py
src/: Main.hs
src/main/resources/: c3p0.properties  hazelcast.xml
src/main/scala/: JettyLauncher.scala  ProBasketballAPI.scala  ScalatraBootstrap.scala
src/main/scala/bootstrap/: Boot.scala
src/main/scala/com/github/mysterionrise/: NBAPrediction.scala  ProBasketballAPI.scala
src/main/scala/com/github/mysterionrise/model/: GameStats.scala  Player.scala  ShotChart.scala  Team.scala
src/main/scala/fantazy/: Boot.scala
src/main/scala/fantazy/action/: Admin.scala  DefaultLayout.scala  Errors.scala  Leagues.scala  Players.scala  SiteIndex.scala  Tournaments.scala
src/main/scala/fantazy/domain/: Calendar.scala  League.scala  Player.scala  Team.scala  Tournament.scala
src/main/scala/org/mystic/: PipeOperator.scala  SimpleWorkflow.scala  Stats.scala  Test.scala  Utils.scala  package.scala
src/main/scala/org/mystic/bearded/scalatra/: BeardedScalatraStack.scala  MyScalatraServlet.scala
src/main/scala/org/mystic/cache/: Client.scala  FindTerm.java  Main.scala  PopulatingClient.scala  Server.scala  package.scala
src/main/scala/org/mystic/consumer/: KafkaStreamConsumer.scala
src/main/scala/org/mystic/fantazy/: Boot.scala
src/main/scala/org/mystic/fantazy/action/: About.scala  Admin.scala  DefaultLayout.scala  Errors.scala  Leagues.scala  Players.scala  SiteIndex.scala  Tournaments.scala
src/main/scala/org/mystic/fantazy/db/: DatabaseInit.scala  PlayersDB.scala
src/main/scala/org/mystic/fantazy/domain/: Calendar.scala  League.scala  Player.scala  Team.scala  Tournament.scala
src/main/scala/org/mystic/fantazy/parser/: PlayersCrawler.scala  TeamParser.scala
src/main/scala/org/mystic/h2h/: DatabaseInit.scala  DatabaseSessionSupport.scala  H2HMainServlet.scala  H2hTestAppStack.scala  MyScalatraServlet.scala  PlayersDB.scala
src/main/scala/org/mystic/h2h/fantasy/: App.scala  DBGateway.scala  (+5 more)
src/main/scala/org/mystic/producer/: KafkaStreamProducer.scala  MeetupStreamProducer.scala  SherdogEventsStreamProducer.scala  Test.scala  Tweet.scala  TwitterStreamProducer.scala
src/main/scala/producer/: Test.scala  Tweet.scala  TwitterStreamProducer.scala
src/main/scalate/fantazy/action/: DefaultLayout.jade
src/main/webapp/: default.html  index.html
src/main/webapp/WEB-INF/templates/layouts/: default.ssp  h2h.ssp  khl.ssp
src/main/webapp/WEB-INF/templates/views/: hello-scalate.jade  index.ssp  khl.ssp  league.ssp
src/test/scala/org/mystic/h2h/: MyScalatraServletSpec.scala
(+12 files in other folders)
