name: h2h-fantazy
version: 0.1.0.0
cabal-version: >=1.8
build-type: Simple
license: AllRightsReserved
license-file: LICENSE
data-dir: ""
 
executable h2h-fantazy
    build-depends: text >=1.1.1.3 && <1.2,
                   xml-conduit >=1.2.0.2 && <1.3, base ==4.6.*, http-conduit ==2.1.*,
                   bytestring ==0.10.*
    main-is: Main.hs
    buildable: True
    hs-source-dirs: src
 